--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "fast-xml-parser": "^5.2.5",
     "idb": "^8.0.0",
+    "jspdf": "^3.0.3",
     "mammoth": "^1.10.0",
     "next": "14.2.5",
     "pdfjs-dist": "^3.11.174",
